syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.openledger";
option java_outer_classname = "HttpOperations";

package http.operations;
enum Type {
  DEBIT = 0;
  CREDIT = 1;
}
message OpenAccountRequest {
  Type account_type = 1;
  string account_id = 2;
}

message AdjustRequest {
  Type adjustment_type = 1;
  string transaction_id = 2;
  string entry_code = 3;
  double amount = 4;
}

message AccountResponse {
  string id = 1;
  Type type = 2;
  Balance balance = 3;
  message Balance {
    double available = 1;
    double current = 2;
  }
}